trying to fix scrolling on mobile

--- a/css/style.css
+++ b/css/style.css
@@ -3,6 +3,10 @@
 	outline: none;
 }
 
+.ui-loader {
+	display: none;
+}
+
 html,body {
 	overflow: hidden;
 	position: relative;
